# AES-I-Project

./: README.md  cam_in_traffic_light.py  create_sensor.py  reinforcement learning.py  traffic_cam.py  vehicle_detection.py
smartdata-experiments/smartdata-main/: .gitignore  CMakeLists.txt  clean_compile.sh  outputnode  outputsink  server_udp.py  smartdata  smartdata.sln  smartdata.vcxproj  smartdata.vcxproj.filters
smartdata-experiments/smartdata-main/include/: main_traits.h  smartdata.h  transducer.h
smartdata-experiments/smartdata-main/include/architecture/: cpu.h  tsc.h
smartdata-experiments/smartdata-main/include/architecture/ia32/: ia32_cpu.h  ia32_traits.h  ia32_tsc.h
smartdata-experiments/smartdata-main/include/machine/: aes.h  network.h  nic.h  udpnic.h
smartdata-experiments/smartdata-main/include/network/: ethernet.h  hecops.h
smartdata-experiments/smartdata-main/include/network/tstp/: locator.h  manager.h  router.h  security.h  timekeeper.h  tstp.h
smartdata-experiments/smartdata-main/include/system/: meta.h  thread.h  traits.h  types.h
smartdata-experiments/smartdata-main/include/utility/: aes.h  array.h  bignum.h  buffer.h  convert.h  debug.h  diffie_hellman.h  geometry.h  handler.h  list.h  math.h  observer.h  ostream.h  poly1305.h  predictor.h  random.h
smartdata-experiments/smartdata-main/src/: main.cpp
smartdata-experiments/smartdata-main/src/network/tstp/: locator.cc  manager.cc  router.cc  security.cc  timekeeper.cc  tstp.cc  tstp_init.cc
smartdata-experiments/smartdata-main/src/utility/: aes.cc  bignum.cc  ostream.cc  random.cc
(+2 files in other folders)
